<resources>
    <string name="app_name">MyChat</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="newuser">新用户</string>
    <string name="regist">注册</string>
    <string name="conversation_title">消息</string>
    <string name="contact_title">联系人</string>
    <string name="plugin_title">动态</string>
    <string name="exit_btn_content">退(%%)出</string>
    <string name="addFriend">添加朋友</string>
    <string name="chatWith">与%%聊天中</string>
</resources>
