<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bk"
    android:orientation="vertical">
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/avatar_9"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"/>
    <EditText
        android:id="@+id/regist_username"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/username"
        android:textColor="#000"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"/>

    <EditText
        android:id="@+id/regist_password"
        android:inputType="numberPassword"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:textColor="#000"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"/>

    <Button
        android:id="@+id/regist_btn"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:textSize="22sp"
        android:textColor="#fff"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
